<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_joint_trajectory_plot</name>

  <version>0.0.5</version>

  <description>The rqt_joint_trajectory_plot package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <author email="ryosuke.tajima@gmail.com">Ryosuke Tajima</author>

  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/rqt_joint_trajectory_plot</url> -->

  <build_depend>rclpy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
